# blender279-modular-android

./: CMakeLists.txt  blender_mod  main.c
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/blender279modular/: BlenderActivity.java
android/java/com/blender279modular/: BlenderActivity.java
android/jni/: blender_android.c
core/: BLE_core_dna.c  BLE_core_dna.h  BLE_core_math.c  BLE_core_math.h  BLE_core_memory.c  BLE_core_memory.h  BLE_module_api.h  BLE_module_core.c  BLE_module_registry.c  BLE_types.h
core/compat/: BKE_DerivedMesh.h  BKE_action.h  BKE_bvh.h  BKE_bvhutils.h  BKE_cachefile.h  BKE_camera.h  BKE_cdderivedmesh.h  BKE_collision.h  BKE_colortools.h  BKE_curve.h  BKE_customdata.h  BKE_data_transfer.h  BKE_deform.h  BKE_depsgraph.h  BKE_displist.h  BKE_dynamicpaint.h  BKE_editmesh.h  BKE_effect.h  BKE_global.h  BKE_image.h  BKE_key.h  BKE_lattice.h  BKE_library.h  BKE_library_query.h  BKE_main.h  BKE_material.h  BKE_mesh.h  BKE_mesh_mapping.h  BKE_mesh_remap.h  BKE_multires.h  BKE_node.h  BKE_object.h  BKE_object_deform.h  BKE_ocean.h  BKE_paint.h  BKE_particle.h  BKE_pbvh.h  BKE_report.h  BKE_scene.h  BKE_shrinkwrap.h  (+146 more)
core/gpu/: gpu_material.c  gpu_texture_private.hh
core/gpu/opengl/: gl_backend.cc  gl_batch.cc  gl_context.cc  gl_context.hh  gl_framebuffer.cc  gl_index_buffer.cc  gl_query.hh  gl_shader.cc  gl_shader.hh  gl_shader_interface.cc  gl_state.cc  gl_storage_buffer.cc  gl_texture.cc  gl_uniform_buffer.cc  gl_vertex_buffer.cc
modules/anim/: BLE_module_anim.c  BLE_module_anim.h  CMakeLists.txt
modules/depsgraph/: BLE_module_depsgraph.c  BLE_module_depsgraph.h  CMakeLists.txt
modules/io/: BLE_module_io.c  BLE_module_io.h  CMakeLists.txt
modules/mesh/: BLE_module_mesh.c  BLE_module_mesh.h  CMakeLists.txt  mesh_adapter.c  mesh_adapter.h
modules/mesh/bmesh/: bmesh.h  bmesh_bevel.c
modules/mesh/bmesh/intern/: bmesh_edgeloop.h  bmesh_operator_api.h  bmesh_private.h  bmesh_structure.h
modules/mesh/bmesh/tools/: bmesh_beautify.h  bmesh_bevel.h  bmesh_bisect_plane.h  bmesh_class.h  bmesh_construct.h  bmesh_core.h  bmesh_decimate.h  bmesh_edgeloop.h  bmesh_edgenet.h  bmesh_edgesplit.h  bmesh_error.h  bmesh_inline.h  bmesh_interp.h  bmesh_intersect.h  bmesh_iterators.h  bmesh_iterators_inline.h  bmesh_log.h  bmesh_marking.h  bmesh_mesh.h  bmesh_mesh_conv.h  bmesh_mesh_validate.h  bmesh_operator_api_inline.h  bmesh_operators.h  bmesh_operators_private.h  bmesh_path.h  bmesh_path_region.h  bmesh_polygon.h  bmesh_private.h  bmesh_queries.h  bmesh_region_match.h  bmesh_separate.h  bmesh_structure.h  bmesh_structure_inline.h  bmesh_triangulate.h  bmesh_walkers.h  bmesh_walkers_private.h  bmesh_wireframe.h
modules/mesh/derivedmesh/: BKE_cdderivedmesh.h
modules/mesh/modifiers/intern/: CCGSubSurf.h
modules/mesh/modifiers/tools/: bmesh_beautify.h  bmesh_bevel.h  bmesh_bisect_plane.h  bmesh_callback_generic.h  bmesh_construct.h  bmesh_core.h  bmesh_decimate.h  bmesh_delete.h  bmesh_edgenet.h  bmesh_edgesplit.h  bmesh_error.h  bmesh_intersect.h  bmesh_iterators.h  bmesh_mesh.h  bmesh_mesh_validate.h  bmesh_mods.h  bmesh_operator_api.h  bmesh_operators.h  bmesh_operators_private.h  bmesh_path.h  bmesh_path_region.h  bmesh_polygon.h  bmesh_polygon_edgenet.h  bmesh_private.h  bmesh_queries.h  bmesh_queries_inline.h  bmesh_region_match.h  bmesh_separate.h  bmesh_structure.h  bmesh_structure_inline.h  bmesh_tools.h  bmesh_triangulate.h  bmesh_walkers_private.h  bmesh_wireframe.h
modules/physics/: BLE_module_physics.c  BLE_module_physics.h  CMakeLists.txt
modules/render/: BLE_module_render.c  BLE_module_render.h  CMakeLists.txt
modules/tools/: BLE_module_tools.c  BLE_module_tools.h  CMakeLists.txt  bmesh_wireframe.h
modules/tools/animation/: BLE_tool_animation_timeline.c
modules/tools/mesh/: BLE_tool_mesh_select.c
modules/tools/sculpt/: BLE_tool_sculpt_brush.c
plugins/render/: BLE_render_api.h  BLE_render_module.c
plugins/render/engines/: BLE_engine_br.c  BLE_engine_eevee.c
